07-kubernetes_que-es-un-operador-y-rabbitmq/002-rabbitmqcluster-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmqcluster-ingress
  namespace: default
  labels:
    app: rabbitmqcluster
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - test.dominio.com
    secretName: rabbitmqcluster-tls

  rules:
  - host: test.dominio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmqcluster-rabbitmq-client
            port:
              number: 15672
              #name:
